# dropset-alpha

./: .gitignore  Cargo.toml  Makefile  README.md  package.json
.cargo/: config.toml
bots/crates/market-maker/: Cargo.toml  test_oanda_response.json
bots/crates/market-maker/examples/: initialization_helper.rs
bots/crates/market-maker/src/: calculate_spreads.rs  cli.rs  load_env.rs  main.rs  model_parameters.rs
bots/crates/market-maker/src/maker_context/: maker_state.rs  mod.rs  order_as_key.rs  order_flow.rs  utils.rs
bots/crates/market-maker/src/oanda/: mod.rs  price_feed.rs  types.rs
bots/crates/market-taker/: Cargo.toml
client/: Cargo.toml
client/examples/: close_seat.rs  deposit_and_withdraw.rs  many_instructions.rs  market_order.rs  post_and_cancel.rs  post_asks.rs  two_seats.rs
client/src/: lib.rs  logs.rs  token_instructions.rs  transactions.rs  views.rs
client/src/context/: market.rs  token.rs
client/src/e2e_helpers/: mod.rs  mollusk.rs
client/src/mollusk_helpers/: mod.rs
client/tests/: instruction_data_len_cost.rs  simple_transfer.rs
cu-bench/manifest/: Cargo.toml  README.md  run-bench.sh
cu-bench/manifest/src/: lib.rs  utils.rs
cu-bench/manifest/src/fixtures/: global_fixture.rs  market_fixture.rs  mint_fixture.rs  mod.rs  test_fixture.rs  token_account_fixture.rs
cu-bench/manifest/tests/: cu_measurement.rs
cu-bench/phoenix/: Cargo.toml  README.md  run-bench.sh  rust-toolchain.toml
cu-bench/phoenix/src/: lib.rs  utils.rs
cu-bench/phoenix/tests/: cu_measurement.rs
grpc-stream/: Cargo.toml
grpc-stream/custom-test-validator/: Dockerfile  compose.yaml  geyser-config.json
grpc-stream/src/: lib.rs  main.rs  parse_update.rs
instruction-macros/: README.md
instruction-macros/crates/instruction-macros/: Cargo.toml
instruction-macros/crates/instruction-macros-impl/src/parse/: error_path.rs  error_type.rs  parsed_enum.rs
instruction-macros/crates/instruction-macros-impl/src/render/: feature.rs  mod.rs  try_from_u8.rs
instruction-macros/crates/instruction-macros-impl/src/render/instruction_accounts/: account_loader.rs  account_meta.rs  invoke_methods.rs
instruction-macros/crates/instruction-macros-impl/src/render/instruction_data/pack_and_unpack/: mod.rs  pack.rs  statements.rs  statements_and_layout_info.rs  unpack.rs
instruction-macros/crates/instruction-macros/src/: debug.rs  lib.rs
instruction-macros/crates/instruction-macros/src/derive/: instruction_accounts.rs  instruction_data.rs  instruction_event_data.rs  mod.rs
instruction-macros/crates/test-fixtures/: Cargo.toml
instruction-macros/crates/test-fixtures/src/: lib.rs  program.rs
instruction-macros/crates/test-fixtures/tests/: tests.rs
interface/: Cargo.toml
interface/src/: error.rs  instructions.rs  lib.rs  pack.rs  syscalls.rs
interface/src/events/: mod.rs
interface/src/instructions/: amount.rs  close.rs  close_seat.rs  deposit.rs  num_sectors.rs  withdraw.rs
interface/src/state/: asks_dll.rs  bids_dll.rs  free_stack.rs  linked_list.rs  market.rs  market_header.rs  market_seat.rs  mod.rs  node.rs  order.rs  sector.rs  transmutable.rs  user_order_sectors.rs
price/: Cargo.toml
price/src/: client_helpers.rs  decoded_price.rs  encoded_price.rs  error.rs  lib.rs  validated_mantissa.rs
program/: Cargo.toml
program/src/: debug.rs  entrypoint.rs
program/src/context/: cancel_order_context.rs  close_seat_context.rs  deposit_withdraw_context.rs  flush_events_context.rs  market_order_context.rs  mod.rs  mutate_orders_context.rs  post_order_context.rs  register_market_context.rs
program/src/instructions/: batch_replace.rs  cancel_order.rs  close_seat.rs  deposit.rs  mod.rs  post_order.rs  register_market.rs  withdraw.rs
program/src/instructions/market_order/: mod.rs
program/src/shared/: account_resize.rs  market_operations.rs  mod.rs  order_operations.rs  seat_operations.rs
program/src/shared/token_utils/: market_transfers.rs  mod.rs
program/src/validation/: market_account_info.rs  mint_info.rs  mod.rs  token_account_info.rs
transaction-parser/: Cargo.toml  test_logs.json
transaction-parser/src/: views.rs
transaction-parser/src/client_rpc/: parsed_transaction.rs
transaction-parser/src/events/: dropset_event.rs
