[workspace]
resolver = "2"
members = [
  "client",
  "instruction-macros/crates/instruction-macros",
  "instruction-macros/crates/instruction-macros-impl",
  "instruction-macros/crates/test-fixtures",
  "interface",
  "program",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.100"
bincode = "1.3.3"
borsh = "1"
bytemuck = { version = "1.23.2", features = ["derive"] }
colored = { version = "3.0.0" }
derive_more = "2.0.1"
itertools = "0.14.0"
futures = "0.3.31"
pinocchio = { version = "0.9.2" }
pinocchio-associated-token-account = { version = "0.2.0" }
pinocchio-log = { version = "0.5.1" }
pinocchio-pubkey = { version = "0.3.0" }
pinocchio-system = { version = "0.3.0" }
pinocchio-token = { version = "0.4.0" }
pinocchio-token-2022 = { version = "0.1.0" }
lazy-regex = "3.4.2"
regex = "1.12.2"
solana-address = "1.0.0"
solana-client = "3.0.7"
solana-commitment-config = "3.0.0"
solana-cpi = "3.0.0"
solana-compute-budget-interface = "3.0.0"
solana-instruction = "3.0.0"
solana-instruction-error = "2.0.0"
solana-msg = "3.0.0"
solana-sdk = "3.0.0"
solana-system-interface = "2.0.0"
solana-pubkey = { version = "3.0.0", features = ["curve25519"] }
solana-transaction-error = "3.0.0"
solana-transaction-status = "3.0.7"
solana-transaction-status-client-types = "3.0.7"
spl-associated-token-account-interface = "2.0.0"
spl-token-interface = "2.0.0"
spl-token-2022-interface = "2.0.0"
static_assertions = "1.1.0"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = "1.47.1"

# proc-macro dependencies
quote = "1.0.41"
proc-macro2 = "1.0.103"
syn = { version = "2.0.108", features = ["full", "extra-traits", "visit"] }

[workspace.dependencies.pinocchio-token-interface]
git = "https://github.com/solana-program/token.git"
rev = "75116550519a9ee3fdfa6c819aca91e383fffa39"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("no-entrypoint"))',
    'cfg(feature, values("std"))',
    'cfg(feature, values("pinocchio"))',
    'cfg(feature, values("solana-program"))',
    'cfg(feature, values("client"))',
]
