[workspace]
resolver = "2"
members = [
  "bots/crates/market-maker",
  "bots/crates/market-taker",
  "client",
  "instruction-macros/crates/instruction-macros",
  "instruction-macros/crates/instruction-macros-impl",
  "instruction-macros/crates/test-fixtures",
  "interface",
  "grpc-stream",
  "price",
  "program",
  "transaction-parser",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.100"
bincode = "1.3.3"
borsh = "1"
bytemuck = { version = "1.23.2", features = ["derive"] }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
colored = { version = "3.0.0" }
derive_more = "2.1.1"
itertools = "0.14.0"
futures = "0.3.31"
lazy-regex = "3.5.1"
mollusk-svm = "0.10.0"
pinocchio = { version = "0.10.1" }
pinocchio-associated-token-account = { version = "0.3.0" }
pinocchio-log = { version = "0.5.1" }
pinocchio-system = { version = "0.5.0" }
pinocchio-token = { version = "0.5.0" }
pinocchio-token-2022 = { version = "0.2.0" }
regex = "1.12.2"
reqwest = "0.13.1"
rust_decimal = { version = "1.40.0", features = ["macros"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = { version = "1.0.0" }
solana-account = "3.3.0"
solana-account-view = "1.0"
solana-address = "2.0.0"
solana-client = "3.1.6"
solana-commitment-config = "3.1.0"
solana-cpi = "3.1.0"
solana-compute-budget-interface = "3.0.0"
solana-instruction = "3.1.0"
solana-instruction-error = "2.1.0"
solana-instruction-view = "1.0"
solana-keypair = "3.1.0"
solana-msg = "3.0.0"
solana-sdk = "3.0.0"
solana-system-interface = "3.0.0"
solana-pubkey = { version = "4.0.0", features = ["curve25519"] }
solana-transaction-error = "3.0.0"
solana-transaction-status = "3.1.6"
solana-transaction-status-client-types = "3.1.6"
spl-associated-token-account-interface = "2.0.0"
spl-token-interface = "2.0.0"
spl-token-2022-interface = "2.1.0"
static_assertions = "1.1.0"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = "1.49.0"
tokio-stream = "0.1.17"
yellowstone-grpc-client = "10.2.0"
yellowstone-grpc-proto = "10.1.1"

# proc-macro dependencies
quote = "1.0.43"
proc-macro2 = "1.0.105"
syn = { version = "2.0.114", features = ["full", "extra-traits", "visit"] }

[workspace.dependencies.pinocchio-token-interface]
git = "https://github.com/solana-program/token.git"
rev = "75116550519a9ee3fdfa6c819aca91e383fffa39"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(target_feature, values("static-syscalls"))',
    'cfg(feature, values("no-entrypoint"))',
    'cfg(feature, values("std"))',
    'cfg(feature, values("pinocchio"))',
    'cfg(feature, values("solana-program"))',
    'cfg(feature, values("client"))',
]
