[package]
name = "dropset-interface"
version.workspace = true
edition.workspace = true

[dependencies]
instruction-macros = { path = "../instruction-macros/crates/instruction-macros" }
pinocchio.workspace = true
pinocchio-pubkey.workspace = true
pinocchio-token.workspace = true
pinocchio-token-interface.workspace = true
solana-cpi = { workspace = true, optional = true }
solana-instruction = { workspace = true, optional = true }
solana-sdk = { workspace = true, optional = true }
static_assertions.workspace = true
strum = { workspace = true, optional = true }
strum_macros = { workspace = true, optional = true }

[dev-dependencies]
strum.workspace = true
strum_macros.workspace = true

[lints]
workspace = true

[features]
default = ["pinocchio"]
std = []
pinocchio = []
client = ["dep:solana-instruction", "dep:solana-cpi", "dep:solana-sdk", "dep:strum", "dep:strum_macros"]
solana-program = ["dep:solana-instruction", "dep:solana-cpi", "dep:solana-sdk"]
