[package]
name = "dropset-interface"
version.workspace = true
edition.workspace = true

[dependencies]
instruction-macros = { path = "../instruction-macros/crates/instruction-macros" }
pinocchio.workspace = true
pinocchio-token.workspace = true
pinocchio-token-interface.workspace = true
price = { path = "../price" }
solana-account-view.workspace = true
solana-address = { workspace = true, features = ["copy"] }
solana-cpi = { workspace = true, optional = true }
solana-instruction = { workspace = true, optional = true }
solana-instruction-view = { workspace = true, features = ["cpi"] }
solana-program-error.workspace = true
solana-sdk = { workspace = true, optional = true }
static_assertions.workspace = true
strum = { workspace = true, optional = true }
strum_macros = { workspace = true, optional = true }

[dev-dependencies]
strum.workspace = true
strum_macros.workspace = true
solana-sdk = { workspace = true }

[lints]
workspace = true

[features]
default = ["program"]
std = []
program = []
client = ["dep:solana-instruction", "dep:solana-cpi", "dep:solana-sdk", "dep:strum", "dep:strum_macros"]
