[package]
name = "price"
version.workspace = true
edition.workspace = true

[dependencies]
static_assertions.workspace = true
pinocchio.workspace = true
rust_decimal = { workspace = true, optional = true }
strum = { workspace = true, optional = true }
strum_macros = { workspace = true, optional = true }

[dev-dependencies]
rust_decimal = { workspace = true }
strum.workspace = true
strum_macros.workspace = true

[lints]
workspace = true

[features]
default = []
client = ["dep:rust_decimal", "dep:strum", "dep:strum_macros"]
