[package]
name = "dropset"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck.workspace = true
dropset-interface = { path = "../interface", features = ["pinocchio"], default-features = false }
pinocchio.workspace = true
pinocchio-associated-token-account.workspace = true
pinocchio-log = { workspace = true, optional = true }
pinocchio-pubkey.workspace = true
pinocchio-system.workspace = true
pinocchio-token.workspace = true
pinocchio-token-interface.workspace = true
pinocchio-token-2022.workspace = true
price = { path = "../price" }
static_assertions.workspace = true

[dev-dependencies]
solana-pubkey.workspace = true
solana-sdk.workspace = true

[lints]
workspace = true

[features]
default = []
std = []
no-entrypoint = []
debug = ["dep:pinocchio-log"]
