[package]
name = "dropset"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck.workspace = true
dropset-interface = { path = "../interface", features = ["program"], default-features = false }
instruction-macros-traits = { path = "../instruction-macros/crates/instruction-macros-traits" }
pinocchio.workspace = true
pinocchio-associated-token-account.workspace = true
pinocchio-system.workspace = true
pinocchio-token.workspace = true
pinocchio-token-interface.workspace = true
pinocchio-token-2022.workspace = true
price = { path = "../price" }
solana-account-view.workspace = true
solana-address = { workspace = true, features = ["copy"] }
solana-instruction-view = { workspace = true, features = ["cpi"] }
solana-program-log = { workspace = true, optional = true }
static_assertions.workspace = true

[dev-dependencies]
solana-pubkey.workspace = true
solana-sdk.workspace = true

[lints]
workspace = true

[features]
default = []
std = []
no-entrypoint = []
debug = ["dep:solana-program-log"]
