[package]
name = "transaction-parser"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
derive_more = { workspace = true, features = ["into_iterator", "index", "as_ref", "deref"]}
dropset = { path = "../program" }
dropset-interface = { path = "../interface", features = ["client", "solana-program"], default-features = false }
itertools.workspace = true
lazy-regex.workspace = true
price = { path = "../price" }
solana-sdk.workspace = true
solana-transaction-status.workspace = true
solana-transaction-status-client-types.workspace = true
strum.workspace = true
strum_macros.workspace = true

[dev-dependencies]
serde = { version = "1.0.228" }
serde_json = { version = "1.0.145" }

[lints]
workspace = true
