[package]
name = "cu-bench-manifest"
version = "0.1.0"
edition = "2021"
description = "CU measurement benchmarks for manifest-dex"
publish = false

[workspace]

[dependencies]
anyhow = "1.0.101"
manifest-dex = { git = "https://github.com/Bonasa-Tech/manifest.git", tag = "program-v3.0.10" }
solana-logger = "2.2"
solana-program = "=2.2"
solana-program-runtime = "2.2"
solana-program-test = "2.2"
solana-sdk = "2.2"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "9.0.0", features = [ "no-entrypoint" ] }
time = "=0.3.41"
tokio = "1.28.0"

# By default, tests will build with release settings so CU usage is accurate.
[profile.test]
lto = "fat"
opt-level = 3
debug = false
codegen-units = 1
overflow-checks = true
strip = "debuginfo"

# Fast compile time profile for development.
[profile.fast]
inherits = "dev"
opt-level = 0
debug = true
lto = "off"
codegen-units = 256
incremental = true
overflow-checks = true
strip = "none"
