[package]
name = "market-maker"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
client = { path = "../../../client" }
chrono.workspace = true
colored.workspace = true
dropset-interface = { path = "../../../interface" }
itertools.workspace = true
price = { path = "../../../price", features = ["client" ] }
reqwest.workspace = true
rust_decimal = { workspace = true, features = ["macros", "serde-with-arbitrary-precision"] }
solana-address.workspace = true
solana-client.workspace = true
solana-keypair.workspace = true
solana-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
transaction-parser = { path = "../../../transaction-parser" }
