[package]
name = "instruction-macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
instruction-macros-impl = { path = "../instruction-macros-impl" }
itertools.workspace = true
quote.workspace = true
proc-macro2.workspace = true
syn.workspace = true
