[package]
name = "instruction-macros-test-fixtures"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
instruction-macros = { path = "../instruction-macros" }
pinocchio = { workspace = true, optional = true }
solana-account-view.workspace = true
solana-address = { workspace = true, features = ["copy"] }
solana-cpi = { workspace = true, optional = true }
solana-instruction = { workspace = true, optional = true }
solana-instruction-view = { workspace = true, optional = true, features = ["cpi"] }
solana-program-error.workspace = true
solana-sdk = { workspace = true, optional = true}

[dev-dependencies]
macrotest = "1.2.0"

[features]
default = ["client", "pinocchio", "solana-program"]
client = ["dep:solana-instruction", "dep:solana-cpi", "dep:solana-sdk"]
pinocchio = ["dep:solana-instruction-view", "dep:pinocchio"]
solana-program = ["dep:solana-instruction", "dep:solana-cpi", "dep:solana-sdk"]
