[package]
name = "instruction-macros-test-fixtures"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
instruction-macros = { path = "../instruction-macros" }
solana-account-view.workspace = true
solana-address = { workspace = true, features = ["copy"] }
solana-cpi = { workspace = true, optional = true }
solana-instruction = { workspace = true, optional = true }
solana-instruction-view = { workspace = true, optional = true, features = ["cpi"] }
solana-program-error.workspace = true

[dev-dependencies]
macrotest = "1.2.0"

[features]
default = ["client", "program"]
client = ["dep:solana-instruction", "dep:solana-cpi"]
program = ["dep:solana-instruction-view"]
